better landing page :o

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
 
   color-scheme: light dark;
   color: #eaf2f6;
-  background-color: #091113;
+  background-color: #000000;
+  /* background-color: #091113; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
