plans added to landing

--- a/src/StyledComponents/Landing.css
+++ b/src/StyledComponents/Landing.css
@@ -63,3 +63,36 @@
     transform: scale(1.03);
   }
 }
+
+/* ********************************************************** */
+
+.premiumCard {
+  text-decoration: none;
+  border: 1px solid rgb(146, 148, 248);
+  position: relative;
+  overflow: hidden;
+}
+
+.premiumCard:hover {
+  box-shadow: 1px 1px 25px 10px rgba(146, 148, 248, 0.4);
+}
+
+.premiumCard:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    120deg,
+    transparent,
+    rgba(146, 148, 248, 0.4),
+    transparent
+  );
+  transition: all 650ms;
+}
+
+.premiumCard:hover:before {
+  left: 100%;
+}
