--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 
   color-scheme: light dark;
   color: #eaf2f6;
+  /* background-color: red; */
   background-color: #000000;
   /* background-color: #091113; */
 
